# SGUP

./: .env.exemple  README.md  SGU.py  conection.py  config.py  main.py  pyproject.toml  requirements.txt
certs/: .nessa_pasta_deve_ficar-os_sertificados
config/: __init__.py  config.py
model/: produtos.py  usarios.py
services/: __init__.py  admin.py  cliente.py  depeds.py  execel.py  porduto.py  publics.py  usario.py
src/: SGU.py  __init__.py  conection.py  main.py  src.md
src/certs/: certs.md
src/config/: config.py
src/model/: __init__.py  model.md
src/services/: admin.py  cliente.py  depeds.py  execel.py  porduto.py  publics.py  services.md
